# SegMNet

./: .gitignore  README.md  alembic.ini  app.py  export_model.py  export_to_onnx.py  predict.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: __init__.py  config.py  database.py  export.py  inference.py  main.py
app/constants/: __init__.py  constants.py  enums.py
app/model/: __init__.py
app/model/data/: __init__.py  dataset.py
app/models/: __init__.py  inference.py
app/models/data/: __init__.py  dataloader.py  dataset.py  utils.py
app/models/fastapi_models/: __init__.py  prediction.py  query.py  user.py
app/models/segmentation/: __init__.py  unet_model.py  unetpp.py
app/models/segmentation_model/: __init__.py  export_to_onnx.py  inference.py
app/models/segmentation_model/data/: __init__.py  data.py  dataloader.py  dataset.py  loader.py  utils.py
app/models/segmentation_model/deeplab/: model.py
app/models/segmentation_model/model/: __init__.py  deeplab.py
app/models/segmentation_model/utils/: __init__.py  metrics.py
app/models/sqlalchemy_models/: __init__.py  user.py
app/models/utils/: __init__.py  metrics.py
app/routers/: __init__.py  auth.py  segmentation.py  segmentation_router.py  user_settings_router.py
app/services/: __init__.py  segmentation_service.py
data/migration/: env.py
data/migration/versions/: 9d14305096bf_initial_revision.py
models/segmentation_model/utils/: metrics.py
output/: output_image.npy
segmnet/: __init__.py
segmnet/constants/: __init__.py  constants.py
