[tool.poetry]
name = "segmnet"
version = "0.1.1"
description = "Simple and precise app for kidney tumor segmentation based on UNet++/DeepLabV3+ and trained on KiTS23 dataset."
authors = ["Artemiy Tereshchenko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^2.2.1"
streamlit = "^1.41.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
opencv-python = "^4.10.0.84"
segmentation-models-pytorch = "^0.3.4"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
lightning = "^2.5.0.post0"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
nibabel = "^5.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
